
      blockproc
      bwlabeln
      getrangefromclass
      im2int16
      im2single
      imabsdiff
      imadd
      imbothat
      imcrop
      imdivide
      imlincomb
      immultiply
      imsubtract
      iptcheckconn
      iptcheckmap
      iptchecknargin
      iptcheckstrs
      iptnum2ordinal
      iscolormap
      normxcorr2
      wavelength2rgb

 ** The following functions have been deprecated in previous releases
    of the image package and have now been removed:

      imginfo

 ** The following functions have been deprecated (see their help text
    for the recommended alternatives):

      blkproc
      dilate
      erode

 ** With the new function `imbothat' the transform option of
    `imtophat' has been deprecated.

 ** The following functions have had been changed for bug fixes and/or
    improved matlab compatibility

      bweuler
      imhist
      conndef
      im2double
      im2uint8
      im2uint16
      isbw
      isgray
      isrgb
      isind
      mat2gray

 ** `imhist' is much more compatible with matlab and among other changes,
    it now uses the whole range of the class for the histogram rather than
    the minimum and maximum of the input image.

 ** `isbw' now defines a black-and-white image as a binary non-sparse
    matrix. This is compatible with matlab. To use the old behaviour,
    use the new option for the call "isbw (img, "non-logical").
    For backwards compatibility, if a non-logical matrix of 0 and 1 is
    used as input, `isbw' will still return true but a warning will be
    issued since this will deprecated later.

 ** `isrgb' now returns false for logical matrix.

 ** `tiff_tag_read' had several bug fixes and can now check IFDs beyond
    the first. It can also accept mutiple tag values and IFDs simultaneously
    and return a matrix of the values found. Its documentation has been
    expanded (as well as an explanation of TIFF structure on the source)

 ** Package is no longer automatically loaded.