@@ -30,6 +30,9 @@ Summary of important user-visible changes for image 1.1.0:
 
       imginfo
 
+ ** The function `graythresh' now returns a second value representing the
+    ``goodness'' of the computed threshold value.
+
  ** The following functions have been deprecated (see their help text
     for the recommended alternatives):
 
